Fixed an issue where I was overlapping CSS selectors to change the same property of an element.

--- a/Portfolio_Site/styles.css
+++ b/Portfolio_Site/styles.css
@@ -16,12 +16,6 @@ ul li, .cb-logo {
   display: inline-block;
 }
 
-li a {
-  color: #1a1a1a;
-  text-decoration: none;
-  transition: color 0.2s ease-in;
-}
-
 .nav-container {
   width: 80%;
   margin: auto;
@@ -38,9 +32,14 @@ li a {
   justify-content: flex-end;
 }
 
+.nav-container a {
+  transition: color 0.2s ease;
+}
+
 .nav-items .item a {
   margin-left: 50px;
-  transition: color 0.2s ease-in;
+  color: #1a1a1a;
+  text-decoration: none;
 }
 
 .nav-items .item a:hover {
@@ -54,7 +53,6 @@ li a {
   font-size: 2.5rem;
   text-decoration: none;
   color: #145bff;
-  transition: color 0.2s ease-in;
 }
 
 .nav-logo:hover {
